Giving the titles a max-width fixes wrapping in IE

--- a/src/styles/components/_home-carousel.scss
+++ b/src/styles/components/_home-carousel.scss
@@ -146,6 +146,7 @@
     white-space: pre-line;
     text-align: center;
     padding: 10px;
+    max-width: 100%;
     @include respond((
       font-size: (20px !important) null (28px !important),
     ));
